Alignment fix

--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 100vw;
   height: 100vh;
   background-color: hsl(233, 47%, 7%);
   padding: 5rem 0;
@@ -39,11 +38,13 @@ main {
 picture {
   background-color: hsl(277, 90%, 30%);
   overflow: hidden;
+  border-start-start-radius: 12px;
+  border-start-end-radius: 12px;
 }
 
 picture img {
-  border-start-start-radius: 12px;
-  border-start-end-radius: 12px;
+  /* border-start-start-radius: 12px;
+  border-start-end-radius: 12px; */
   width: 100%;
   display: flex;
   object-fit: cover;
@@ -52,6 +53,13 @@ picture img {
 
 .info-data {
   padding: max(4vh) 8vw;
+}
+
+footer {
+  position: fixed;
+  background-color: hsl(233, 47%, 7%);
+  bottom: 0;
+  font-size: .6rem;
 }
 
 .info h1,
@@ -99,18 +107,16 @@ span {
   }
   body {
     justify-content: center;
+    padding: 0;
   }
   main {
     flex-direction: row-reverse;
-    width: max(80vw);
+    width: max(80vw, 1200px);
     text-align: left;
   }
 
   picture {
     flex: 1.2;
-  }
-
-  picture img {
     border-start-start-radius: 0px;
     border-end-end-radius: 12px;
   }
